Build : 도커 파일 수정 및 빌드 파일 경로 수정

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
         'build',
         '-t',
         '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}',
-        '.',
+        './placeit-frontend',
       ]
 
   # 2. 빌드된 이미지를 Artifact Registry에 푸시
