--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,20 @@
 steps:
-  # 1. Docker 이미지 빌드
-  #    -t: 이미지 이름과 태그를 지정합니다. (Artifact Registry 경로)
-  #    $SHORT_SHA: Git 커밋 해시 앞 7자리를 태그로 사용하여 버전을 관리합니다.
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      [
-        'build',
-        '-t',
-        '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}',
-        '.',
-      ]
+      - 'build'
+      - '-t'
+      - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}'
+      - '--build-arg'
+      - 'NEXT_PUBLIC_API_URL=${_NEXT_PUBLIC_API_URL}'
+      - '.'
 
   # 2. 빌드된 이미지를 Artifact Registry에 푸시
   - name: 'gcr.io/cloud-builders/docker'
     args:
-      [
-        'push',
-        '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}',
-      ]
+      - 'push'
+      - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}'
 
   # 3. 새로운 이미지로 Cloud Run 서비스 배포
-  #    gcloud run deploy [서비스이름] --image [이미지경로] --region [리전]
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
@@ -32,7 +26,7 @@ steps:
       - '${_REGION}'
       - '--platform'
       - 'managed'
-      - '--allow-unauthenticated' # 필요에 따라 설정 (공개 접근 허용)
+      - '--allow-unauthenticated' # 필요에 따라 설정
 
 # 빌드된 이미지를 Artifact Registry에 저장
 images:
@@ -42,3 +36,4 @@ images:
 substitutions:
   _SERVICE_NAME: 'placeit-client'
   _REGION: 'asia-northeast1'
+  _NEXT_PUBLIC_API_URL: 'https://server-332546556871.asia-northeast1.run.app'
