--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,7 @@ steps:
       - 'build'
       - '-t'
       - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/cloud-run-source-deploy/${_SERVICE_NAME}:${SHORT_SHA}'
-      - '--build-arg'
-      - 'NEXT_PUBLIC_API_URL=${_NEXT_PUBLIC_API_URL}'
+      - '--build-arg=NEXT_PUBLIC_API_URL=${_NEXT_PUBLIC_API_URL}'
       - '.'
 
   # 2. 빌드된 이미지를 Artifact Registry에 푸시
@@ -36,4 +35,4 @@ images:
 substitutions:
   _SERVICE_NAME: 'placeit-client'
   _REGION: 'asia-northeast1'
-  _NEXT_PUBLIC_API_URL: 'https://www.naver.com/'
+  _NEXT_PUBLIC_API_URL: 'https://www.naver.com'
